pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-app-pod
  namespace: project1
spec:
  containers:
    - name: todo-app-container
      image: trainwithshubham/django-todo:latest
      ports:
       - containerPort: 8000
