service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: project1
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
