ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project1
spec:
  rules:
  - host: todo-app.example.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: todo-app-service
              port:
                number: 80
